Respect settings in DBUS mode

Respect user set settings to either automatically save an image or not.
If within 'after taking a screenshot' the setting 'save file to default folder'
is unset and 'do not copy anything' is set, spectacle will only copy the
screenshot into clipboard.

BUG: 454282